--- a/src/app/modules/notification/notification/notification.component.html
+++ b/src/app/modules/notification/notification/notification.component.html
@@ -1,7 +1,8 @@
 <button
+    
     mat-icon-button
     (click)="onClick()"
     #notificationsOrigin>
-    <mat-icon>notifications_active</mat-icon>
+    <mat-icon class="text-green">notifications_active</mat-icon>
 </button>
 <!--    routerLink="notifications"-->
