--- a/src/app/layout/common/change-password/change-password.component.html
+++ b/src/app/layout/common/change-password/change-password.component.html
@@ -1,10 +1,19 @@
 <div [formGroup]="change_password_form">
-
+    <div class="row mb-2">
+        <div class="col-lg-11">
+            <div class="heading">
+                Change Password
+            </div>
+        </div>
+        <div class="col-lg-1 self-center">
+            <button (click)="close()" style="float:right">
+                <mat-icon class="text-red-500">cancel</mat-icon>
+            </button>
+        </div>
+    </div>
     <span class="text-md font-bold text-red-500" id="error_to_display"></span>
     <span class="text-md font-bold text-green-500" id="success_to_display"></span>
-    <button (click)="close()" style="float:right">
-        <mat-icon class="text-red-500">cancel</mat-icon>
-    </button>
+
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <input matInput type="password" placeholder="Old Password" formControlName="old_password"
         />
@@ -19,8 +28,12 @@
         />
     </mat-form-field>
 
+    <div class="row border-t ">
+        <div class="col-lg-12 text-end">
+            <button class="mat-focus-indicator mt-3 mat-flat-button mat-button-base mat-primary bg-green" mat-flat-button
+            (click)="changePassword()" color="accent"><mat-icon class="mr-2"> vpn_key</mat-icon>Change Password
+            </button>
+        </div>
+    </div>
 
-    <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" mat-flat-button
-            (click)="changePassword()" color="accent">Change Password
-    </button>
 </div>
