--- a/src/app/modules/device-mapping/violations/violations.component.html
+++ b/src/app/modules/device-mapping/violations/violations.component.html
@@ -2,5 +2,5 @@
     mat-icon-button
     (click)="violation()"
     #notificationsOrigin>
-    <mat-icon>error</mat-icon>
+    <mat-icon class="text-red-500">error</mat-icon>
 </button>
