--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan-popup/create-tour-plan-popup.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan-popup/create-tour-plan-popup.component.html
@@ -5,7 +5,12 @@
 
     <div class="kt-login__form">
         <div class="row">
-            <div class="col-lg-12 text-end">
+            <div class="col-lg-11">
+                <div class="heading">
+                    Select  Date(s)
+                </div>
+            </div>
+            <div class="col-lg-1 text-end align-self-center">
                 <button type="button" id="kt_login_signup_cancel" (click)="onCloseClick(0)">
                     <mat-icon class="text-danger">cancel</mat-icon>
                 </button>
@@ -15,7 +20,7 @@
             <div class="col-lg-12">
                 <div class="kt-login__title">
                     <!--<h3>{{ 'AUTH.FORGOT.TITLE' | translate }}</h3>-->
-                    <span class="font-bold">Create Traget</span>
+                    <span class="font-bold"></span>
                 </div>
             </div>
         </div>
@@ -27,14 +32,22 @@
                     <!--begin::Action-->
                     <div class="kt-login__actions float-right">
                         <div class="row">
-                            <div class="col-lg-6 text-end">
-
-                            </div>
                             <div class="col-lg-12">
+                                <ng-container *ngFor="let item of data?.daylist; let row=index" class="mx-2">
+                                    <label for="check-{{row}}"  style="cursor: pointer;" [style.BackgroundColor]="item.isCheck==true?'green !important':''"
+                                    [style.Color]="item.isCheck==true?'white !important':''"
+                                    class="m-2 p-2 px-1 text-sm bg-gray-500 w-32 text-center text-white rounded-full"> {{item.date | date}} </label>
+                                    <input id="check-{{row}}"  [checked]="item.isCheck"
+                                    (change)="item.isCheck = !item.isCheck" [hidden]="true"   type="checkbox">
+                                </ng-container>
+                                
+                               
+                            </div>
+                            <div class="col-lg-12 text-end border-t">
 
                                 <button (click)="submit()" id="kt_login_signin_submit"
-                                        class="w-100 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
-                                        [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}">
+                                        class=" mat-focus-indicator mt-4 mat-flat-button mat-button-base mat-primary bg-green"
+                                        [ngClass]="{'kt-spinner mx-2 kt-spinner--right kt-spinner--md kt-spinner--light': loading}">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
                                     {{'Submit'}}</button>
                             </div>
