--- a/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
+++ b/src/app/modules/tour-plan/create-tour-plan/create-tour-plan.component.html
@@ -6,7 +6,7 @@
         <app-zone-branch-circle [form]="tourPlanForm" [should_filter]="true" [should_show_circle]="true"
             [is_required_circle]="true" (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">Date of Visit (dd/MM/yyyy) <strong class="matMandatory">*</strong>
                     </mat-label>
@@ -15,7 +15,7 @@
                     <mat-datepicker-toggle [disabled]='false' matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker [disabled]='false' #picker></mat-datepicker>
                 </mat-form-field>
-            </div>
+
         </div>
         <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -29,19 +29,19 @@
                 </mat-error> -->
             </mat-form-field>
         </div>
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                <mat-form-field appearance="fill">
-                    <mat-label>Month and Year</mat-label>
+                <mat-form-field appearance="fill" class="w-full">
                     <input matInput [matDatepicker]="dp" placeholder="Month" [formControl]="date">
                     <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
                 </mat-form-field>
-                <mat-datepicker #dp startView="multi-year" (yearSelected)="_yearSelectedHandler($event,dp)"
+                <mat-datepicker #dp startView="multi-year"
+                 (monthSelected)="_selectMonthHandler($event,dp)"
                     panelClass="example-month-picker">
                 </mat-datepicker>
             </div>
         </div>
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-sm-12  kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                     <mat-label class="customMatLabel">Remarks</mat-label>
@@ -59,6 +59,83 @@
             </div>
         </div>
     </div>
+
+
+
+
+    <div>
+        <div class="form-group row px-3 shadow-none" style="
+        min-width: max-content;
+        overflow-y:scroll;"
+        id="pagelist"
+        >
+            <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile border shadow-xs rounded-sm bg-gray-50"
+                 id="custom-table-activity-list">
+                <div class="custom-accordion  rounded-lg my-2 bg-white shadow-sm border"
+                     *ngFor="let activity of tragetList;let i=index" (click)="display(i)">
+                    <div class="custom-accordion-head border-0"
+                         style="cursor: pointer">
+                        <div class="self-center ml-8">
+                            <span class="text-base text-green">
+                                {{activity.date | date}}
+                            </span>
+                        </div>
+
+                        <div class="mr-8">
+                            <button mat-icon-button *ngIf="" >
+                                <mat-icon>expand_more </mat-icon>
+                            </button>
+                            <button mat-icon-button>
+                                <mat-icon>expand_less</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="custom-accordion-body bg-gray-50 border-t rounded"
+                         id="{{'table_'+i}}"
+                         style="display: none">
+                        <table class="table table-responsive" style="display: inline-table !important;">
+                            <thead class="thead-light">
+                            <tr class="table-header-background">
+                                <th>Activity Name</th>
+                                <th>Activity URL</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <!-- <tr *ngFor="let child of activity.ChildActvities">
+                                <td>{{child.ActivityName}}</td>
+                                <td>{{child.ActivityUrl}}</td>
+                                <td>
+                                    <button mat-icon-button color="primary" (click)="editActivity(child)">
+                                        <mat-icon  class="text-green">
+                                            {{ activity.isCoreactivity ? 'visibility' : 'create' }}
+                                        </mat-icon>
+                                    </button>&nbsp;
+                                    <button mat-icon-button color="warn" (click)="deleteActivity(child)">
+                                        <mat-icon>
+                                            delete
+                                        </mat-icon>
+                                    </button>
+                                </td>
+                            </tr> -->
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
 
     <div class="container  px-0 pt-2">
         <div class="table-responsive  border shadow-xs rounded-sm bg-gray-50" id="map_canvas">
