--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -47,7 +47,7 @@
             <span *ngIf="user?.BranchName" class=" text-md font-bold ml-4">Branch Name :<span
                 class=" text-sm ml-1 font-medium text-green">{{user?.BranchName}}</span></span>
 
-            <span *ngIf="time" class=" text-md font-bold ml-4">Session time :<span
+            <span *ngIf="time" class=" text-md font-bold ml-4">Session Expires In :<span
                 class=" text-sm ml-1 font-medium text-green"><b>{{time}}</b></span></span>
 
         </span>
