--- a/src/app/modules/loan/customer-list/cust-list.component.html
+++ b/src/app/modules/loan/customer-list/cust-list.component.html
@@ -161,8 +161,8 @@
                 <ng-container matColumnDef="View" *ngIf="!isDialog">
                     <mat-header-cell *matHeaderCellDef>View</mat-header-cell>
                     <mat-cell *matCellDef="let customer">
-                        <button *ngIf="!isDialog" mat-icon-button color="primary" (click)="editCustomer(customer)">
-                            <!--<mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>   loggedInUserDetails.User.UserId        -->
+                        <button *ngIf="!isDialog" mat-icon-button color="primary"
+                                (click)="editCustomer(customer)">
                             <mat-icon class="text-green-500" style="margin-left: 2px; color: #01671b !important;"
                                       title="View Customer">visibility
                             </mat-icon>
