--- a/src/app/modules/customer/referback-customers/referback-customers.component.html
+++ b/src/app/modules/customer/referback-customers/referback-customers.component.html
@@ -86,7 +86,9 @@
 
         <div class="example-table-container">
 
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: total_customers_length}" matSort #sort1="matSort"
+            <mat-table class="lmat-elevation-z8" #table
+                       [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: total_customers_length}"
+                       matSort #sort1="matSort"
                        matSortActive="id"
                        matSortDirection="asc" matSortDisableClear>
 
@@ -122,7 +124,7 @@
                 <ng-container matColumnDef="View">
                     <mat-header-cell *matHeaderCellDef>Edit</mat-header-cell>
                     <mat-cell *matCellDef="let customer">
-                        <button mat-icon-button color="primary" *ngIf="CheckEditStatus(customer)"
+                        <button mat-icon-button color="primary" *ngIf="CheckEditStatus(customer) && currentActivity.U"
                                 (click)="editCustomer(customer)">
                             <!-- <mat-icon style="margin-left: 5px;" title="View Customer">accessibility_new</mat-icon> -->
                             <mat-icon style="margin-left: 2px;" title="Edit Customer">edit</mat-icon>
@@ -158,9 +160,10 @@
 
     </div>
     <div class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
-                <span class="font-bold text-green">Items per page:</span>
+        <span class="font-bold text-green">Items per page:</span>
 
-        <mat-select class="border-2 pl-1 py-2"  display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+        <mat-select class="border-2 pl-1 py-2" display="inline" [(value)]="itemsPerPage"
+                    (valueChange)="paginate(1,$event)"
                     style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
             <mat-option [value]="5">5</mat-option>
             <mat-option [value]="10">10</mat-option>
@@ -171,7 +174,7 @@
         <pagination-controls display="inline" (pageChange)="paginate($event)"
                              style="display: inline-block;"></pagination-controls>
         <button (click)="paginate(MathCeil(total_customers_length/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b  class="text-green">{{total_customers_length}}</b> items</p>
+        <p style="float:right;">Total <b class="text-green">{{total_customers_length}}</b> items</p>
 
     </div>
 </div>
