--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -58,10 +58,10 @@
         <div>
             <div class="form-group row" style="
                 min-width: max-content;
-            
+
                 overflow-y:scroll;
             "
-            id="canva"
+                 id="canva"
             >
                 <div
                     class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile border shadow-xs rounded-sm bg-gray-50 px-2  mat-elevation-z8">
@@ -126,7 +126,8 @@
             </div>
             <div class="row py-2 ">
                 <div class="col-lg-12 p-0 mb-4">
-                    <button  type="button" *ngIf="!ShowButton" color="primary"
+                    <button type="button" *ngIf="!ShowButton &&  (_currentActivity.U || _currentActivity.C)"
+                            color="primary"
                             class="mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-green"
                             (click)="onSubmit()"
                             [ngClass]="{'kt-spinner kt-spinner--right kt-spinner--md kt-spinner--light': loading}"
