--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -12,10 +12,10 @@
             <div class="row py-2">
                 <div class="col-lg-12 text-right">
                     <div class=" mt-6 sm:mt-0">
-                        <button
-                            mat-flat-button
-                            [color]="'primary'"
-                            (click)="createOrEditItem()">
+                        <button *ngIf="currentActivity.C"
+                                mat-flat-button
+                                [color]="'primary'"
+                                (click)="createOrEditItem()">
                             <mat-icon [svgIcon]="'heroicons_outline:plus'"></mat-icon>
                             <span class="ml-2 mr-1">Add New </span>
                         </button>
@@ -59,13 +59,13 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let activity">
-                        <button mat-icon-button color="primary"
+                        <button mat-icon-button color="primary" *ngIf="currentActivity.U"
                                 (click)="createOrEditItem(activity)">
                             <mat-icon class="text-green">
                                 {{ activity.isCoreactivity ? 'visibility' : 'create' }}
                             </mat-icon>
                         </button>&nbsp;
-                        <button mat-icon-button color="primary"
+                        <button mat-icon-button color="primary" *ngIf="currentActivity.D"
                                 (click)="deleteActivity(activity)">
                             <mat-icon>
                                 {{ activity.isCoreactivity ? 'visibility' : 'delete' }}
