Not assigned changed to -

--- a/src/app/modules/tour-plan/targets-tracking/targets-tracking.component.html
+++ b/src/app/modules/tour-plan/targets-tracking/targets-tracking.component.html
@@ -27,7 +27,7 @@
                   <div class="col-lg-3 pt-2">
                         <button class="mat-focus-indicator mat-flat-button mat-button-base rounded  bg-green" (click)="getTargetTracks()"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
                   </div>
-            </div>  
+            </div>
 
 
 
@@ -57,17 +57,17 @@
                 <mat-expansion-panel-header style="font-size: 12px;"
                                             class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow-sm border">
                 <span class="mat-cell py-6 self-center font-bold"
-                      style="width: 10px; font-size: 12px;">{{single_provincial_target?.Name ? single_provincial_target.Name : 'Not Assigned'}}</span>
+                      style="width: 10px; font-size: 12px;">{{single_provincial_target?.Name ? single_provincial_target.Name : '-'}}</span>
                     <span class="mat-cell py-6 self-center font-bold"
-                          style="font-size: 12px;">{{single_provincial_target?.DepositAmount ? single_provincial_target?.DepositAmount : 'Not Assigned'}}</span>
+                          style="font-size: 12px;">{{single_provincial_target?.DepositAmount ? single_provincial_target?.DepositAmount : '-'}}</span>
                     <p class="mat-cell py-6 self-center  font-bold"
-                       style="font-size: 12px;">{{single_provincial_target?.DisbursmentAmount ? single_provincial_target?.DisbursmentAmount : 'Not Assigned'}}</p>
+                       style="font-size: 12px;">{{single_provincial_target?.DisbursmentAmount ? single_provincial_target?.DisbursmentAmount : '-'}}</p>
                     <span class="mat-cell py-6 self-center px-2 font-bold"
-                          style="font-size: 12px;">{{single_provincial_target?.NormalRecoveryAmount ? single_provincial_target?.NormalRecoveryAmount : 'Not Assigned'}}</span>
+                          style="font-size: 12px;">{{single_provincial_target?.NormalRecoveryAmount ? single_provincial_target?.NormalRecoveryAmount : '-'}}</span>
                     <span class="mat-cell py-6 self-center px-2 font-bold "
-                          style="font-size: 12px;">{{single_provincial_target?.NplRecoveryAmount ? single_provincial_target?.NplRecoveryAmount : 'Not Assigned'}}</span>
+                          style="font-size: 12px;">{{single_provincial_target?.NplRecoveryAmount ? single_provincial_target?.NplRecoveryAmount : '-'}}</span>
                     <span class="mat-cell py-6 self-center px-2 font-bold "
-                          style="font-size: 12px;">{{single_provincial_target?.SamRecoveryAmount ? single_provincial_target?.SamRecoveryAmount : 'Not Assigned'}}</span>
+                          style="font-size: 12px;">{{single_provincial_target?.SamRecoveryAmount ? single_provincial_target?.SamRecoveryAmount : '-'}}</span>
                 </mat-expansion-panel-header>
                 <div>
                     <div class="custom-accordion-body border-t rounded">
@@ -99,17 +99,17 @@
                                 <mat-expansion-panel-header style="font-size: 12px;"
                                                             class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow-sm border">
                                     <span class="mat-cell py-6 self-center font-bold"
-                                          style="width: 10px; font-size: 12px;">{{target_1?.Name ? target_1?.Name : 'Not Assigned'}}</span>
+                                          style="width: 10px; font-size: 12px;">{{target_1?.Name ? target_1?.Name : '-'}}</span>
                                     <span class="mat-cell py-6 self-center font-bold"
-                                          style="font-size: 12px;">{{target_1?.DepositAmount ? target_1?.DepositAmount : 'Not Assigned'}}</span>
+                                          style="font-size: 12px;">{{target_1?.DepositAmount ? target_1?.DepositAmount : '-'}}</span>
                                     <p class="mat-cell py-6 self-center  font-bold"
-                                       style="font-size: 12px;">{{target_1?.DisbursmentAmount ? target_1?.DisbursmentAmount : 'Not Assigned'}}</p>
+                                       style="font-size: 12px;">{{target_1?.DisbursmentAmount ? target_1?.DisbursmentAmount : '-'}}</p>
                                     <span class="mat-cell py-6 self-center px-2 font-bold"
-                                          style="font-size: 12px;">{{target_1?.NormalRecoveryAmount ? target_1?.NormalRecoveryAmount : 'Not Assigned'}}</span>
+                                          style="font-size: 12px;">{{target_1?.NormalRecoveryAmount ? target_1?.NormalRecoveryAmount : '-'}}</span>
                                     <span class="mat-cell py-6 self-center px-2 font-bold "
-                                          style="font-size: 12px;">{{target_1?.NplRecoveryAmount ? target_1?.NplRecoveryAmount : 'Not Assigned'}}</span>
+                                          style="font-size: 12px;">{{target_1?.NplRecoveryAmount ? target_1?.NplRecoveryAmount : '-'}}</span>
                                     <span class="mat-cell py-6 self-center px-2 font-bold "
-                                          style="font-size: 12px;">{{target_1?.SamRecoveryAmount ? target_1?.SamRecoveryAmount : 'Not Assigned'}}</span>
+                                          style="font-size: 12px;">{{target_1?.SamRecoveryAmount ? target_1?.SamRecoveryAmount : '-'}}</span>
                                 </mat-expansion-panel-header>
                                 <div>
                                     <div class="custom-accordion-body  border-t rounded">
@@ -141,17 +141,17 @@
                                                 <mat-expansion-panel-header style="font-size: 12px;"
                                                                             class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow-sm border">
                                                     <span class="mat-cell py-6 self-center font-bold"
-                                                          style="width: 10px; font-size: 12px;">{{target_2?.Name ? target_2?.Name : 'Not Assigned'}}</span>
+                                                          style="width: 10px; font-size: 12px;">{{target_2?.Name ? target_2?.Name : '-'}}</span>
                                                     <span class="mat-cell py-6 self-center font-bold"
-                                                          style="font-size: 12px;">{{target_2?.DepositAmount ? target_2?.DepositAmount : 'Not Assigned'}}</span>
+                                                          style="font-size: 12px;">{{target_2?.DepositAmount ? target_2?.DepositAmount : '-'}}</span>
                                                     <p class="mat-cell py-6 self-center  font-bold"
-                                                       style="font-size: 12px;">{{target_2?.DisbursmentAmount ? target_2?.DisbursmentAmount : 'Not Assigned'}}</p>
+                                                       style="font-size: 12px;">{{target_2?.DisbursmentAmount ? target_2?.DisbursmentAmount : '-'}}</p>
                                                     <span class="mat-cell py-6 self-center px-2 font-bold"
-                                                          style="font-size: 12px;">{{target_2?.NormalRecoveryAmount ? target_2?.NormalRecoveryAmount : 'Not Assigned'}}</span>
+                                                          style="font-size: 12px;">{{target_2?.NormalRecoveryAmount ? target_2?.NormalRecoveryAmount : '-'}}</span>
                                                     <span class="mat-cell py-6 self-center px-2 font-bold "
-                                                          style="font-size: 12px;">{{target_2?.NplRecoveryAmount ? target_2?.NplRecoveryAmount : 'Not Assigned'}}</span>
+                                                          style="font-size: 12px;">{{target_2?.NplRecoveryAmount ? target_2?.NplRecoveryAmount : '-'}}</span>
                                                     <span class="mat-cell py-6 self-center px-2 font-bold "
-                                                          style="font-size: 12px;">{{target_2?.SamRecoveryAmount ? target_2?.SamRecoveryAmount : 'Not Assigned'}}</span>
+                                                          style="font-size: 12px;">{{target_2?.SamRecoveryAmount ? target_2?.SamRecoveryAmount : '-'}}</span>
                                                 </mat-expansion-panel-header>
                                                 <div>
                                                     <div class="custom-accordion-body  border-t rounded">
@@ -186,18 +186,18 @@
                 <span class="mat-cell py-6 self-center font-bold"
                       style="width: 10px; font-size: 12px;">{{single_provincial_target?.Name}}</span>
                                                                     <span class="mat-cell py-6 self-center font-bold"
-                                                                          style="font-size: 12px;">{{target_3?.DepositAmount ? target_3?.DepositAmount : 'Not Assigned'}}</span>
+                                                                          style="font-size: 12px;">{{target_3?.DepositAmount ? target_3?.DepositAmount : '-'}}</span>
                                                                     <p class="mat-cell py-6 self-center  font-bold"
-                                                                       style="font-size: 12px;">{{target_3?.DisbursmentAmount ? target_3?.DisbursmentAmount : 'Not Assigned'}}</p>
+                                                                       style="font-size: 12px;">{{target_3?.DisbursmentAmount ? target_3?.DisbursmentAmount : '-'}}</p>
                                                                     <span
                                                                         class="mat-cell py-6 self-center px-2 font-bold"
-                                                                        style="font-size: 12px;">{{target_3?.NormalRecoveryAmount ? target_3?.NormalRecoveryAmount : 'Not Assigned'}}</span>
+                                                                        style="font-size: 12px;">{{target_3?.NormalRecoveryAmount ? target_3?.NormalRecoveryAmount : '-'}}</span>
                                                                     <span
                                                                         class="mat-cell py-6 self-center px-2 font-bold "
-                                                                        style="font-size: 12px;">{{target_3?.NplRecoveryAmount ? target_3?.NplRecoveryAmount : 'Not Assigned'}}</span>
+                                                                        style="font-size: 12px;">{{target_3?.NplRecoveryAmount ? target_3?.NplRecoveryAmount : '-'}}</span>
                                                                     <span
                                                                         class="mat-cell py-6 self-center px-2 font-bold "
-                                                                        style="font-size: 12px;">{{target_3?.SamRecoveryAmount ? target_3?.SamRecoveryAmount : 'Not Assigned'}}</span>
+                                                                        style="font-size: 12px;">{{target_3?.SamRecoveryAmount ? target_3?.SamRecoveryAmount : '-'}}</span>
                                                                 </mat-expansion-panel-header>
                                                                 <div>
                                                                     <div
@@ -236,18 +236,18 @@
                       style="width: 10px; font-size: 12px;">{{single_provincial_target?.Name}}</span>
                                                                                     <span
                                                                                         class="mat-cell py-6 self-center font-bold"
-                                                                                        style="font-size: 12px;">{{target_4?.DepositAmount ? target_4?.DepositAmount : 'Not Assigned'}}</span>
+                                                                                        style="font-size: 12px;">{{target_4?.DepositAmount ? target_4?.DepositAmount : '-'}}</span>
                                                                                     <p class="mat-cell py-6 self-center  font-bold"
-                                                                                       style="font-size: 12px;">{{target_4?.DisbursmentAmount ? target_4?.DisbursmentAmount : 'Not Assigned'}}</p>
+                                                                                       style="font-size: 12px;">{{target_4?.DisbursmentAmount ? target_4?.DisbursmentAmount : '-'}}</p>
                                                                                     <span
                                                                                         class="mat-cell py-6 self-center px-2 font-bold"
-                                                                                        style="font-size: 12px;">{{target_4?.NormalRecoveryAmount ? target_4?.NormalRecoveryAmount : 'Not Assigned'}}</span>
+                                                                                        style="font-size: 12px;">{{target_4?.NormalRecoveryAmount ? target_4?.NormalRecoveryAmount : '-'}}</span>
                                                                                     <span
                                                                                         class="mat-cell py-6 self-center px-2 font-bold "
-                                                                                        style="font-size: 12px;">{{target_4?.NplRecoveryAmount ? target_4?.NplRecoveryAmount : 'Not Assigned'}}</span>
+                                                                                        style="font-size: 12px;">{{target_4?.NplRecoveryAmount ? target_4?.NplRecoveryAmount : '-'}}</span>
                                                                                     <span
                                                                                         class="mat-cell py-6 self-center px-2 font-bold "
-                                                                                        style="font-size: 12px;">{{target_4?.SamRecoveryAmount ? target_4?.SamRecoveryAmount : 'Not Assigned'}}</span>
+                                                                                        style="font-size: 12px;">{{target_4?.SamRecoveryAmount ? target_4?.SamRecoveryAmount : '-'}}</span>
                                                                                 </mat-expansion-panel-header>
                                                                                 <div>
                                                                                     <div
